# apollos-portal

./: .dockerignore  .gitignore  .mcp.json.example  CLAUDE.md  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  mise.toml  pyproject.toml  renovate.json
.claude/: settings.json
.claude/agents/: docs-reviewer.md  provisioning-tester.md  security-reviewer.md
.claude/skills/api-doc/: SKILL.md
.claude/skills/deps-check/: SKILL.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/migration/: SKILL.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/precheck/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml
.scratchpad/plans/: ENTRA-ID-SETUP.md  PROJECT-PLAN.md
.serena/: project.yml
.serena/memories/: entra_id_architecture.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml  teams.yaml  teams.yaml.example
backend/alembic/: env.py
backend/alembic/versions/: 513a5fab1fd0_initial_schema.py  c680c026a7e6_add_key_preview_to_provisioned_keys.py
backend/app/: config.py  main.py  utils.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  keys.py  models.py  provision.py  settings.py  teams.py  usage.py
backend/app/core/: auth.py  database.py  exceptions.py  graph.py  logging.py  rate_limit.py  scheduler.py  teams.py
backend/app/models/: __init__.py  audit_log.py  key_notification.py  provisioned_key.py  provisioned_user.py  user_team_membership.py
backend/app/schemas/: admin.py  common.py  keys.py  provision.py  settings.py
backend/app/services/: admin_service.py  audit.py  deprovisioning_service.py  email_service.py  key_service.py  litellm_client.py  notification_service.py  provisioning.py  reconciliation_service.py  rotation_service.py
backend/app/templates/email/: base.html  deprovisioned.html  expiry_warning.html  key_revoked.html  rotation_complete.html
backend/tests/: conftest.py  test_admin_service.py  test_auth.py  test_correlation_id.py  test_cron_jobs.py  test_csv_export.py  test_deprovisioning_service.py  test_email_service.py  test_endpoints.py  test_exceptions.py  test_graph_client.py  test_health.py  test_input_validation.py  test_key_service.py  test_litellm_client.py  test_notification_service.py  test_provisioning.py  test_rate_limit.py  test_reconciliation_service.py  test_rotation_service.py  test_teams_config.py
cli/: pyproject.toml
cli/apollos_cli/: auth.py  main.py
docker/: backend.Dockerfile  docs.Dockerfile  frontend.Dockerfile
docs/: .dockerignore  AGENTS.md  CONTRIBUTING.md  README.md  development.mdx  docs.json  index.mdx  llms-full.txt  llms.txt  quickstart.mdx  skill.md
docs/administration/: entra-id-setup.mdx
docs/ai-tools/: claude-code.mdx
docs/api-reference/: introduction.mdx  openapi.json
docs/cli/: overview.mdx
docs/concepts/: api-keys.mdx  authentication.mdx  teams.mdx  usage.mdx
docs/contributing/: development.mdx  overview.mdx
frontend/: .dockerignore  .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmDialog.test.tsx  (+8 more)
scripts/: generate_llms.py
src/: App.tsx  index.css
src/pages/: ApiKeys.tsx  Dashboard.tsx  Models.tsx  Usage.tsx
(+29 files in other folders)
