[project]
name = "apollos-portal"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["backend", "cli"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF", "S"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]
"**/test_*.py" = ["S101"]
