[project]
name = "apollos-portal"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["backend", "cli"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF", "S", "PT", "DTZ", "ASYNC"]
ignore = ["E501", "B008", "ASYNC109"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "DTZ001"]
"**/test_*.py" = ["S101", "DTZ001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
