[project]
name = "apollos-portal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "msal>=1.35.0",
    "msgraph-sdk>=1.55.0",
    "aiosmtplib>=5.1.0",
    "apscheduler>=3.11.2",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
